--- a/about (2).html
+++ b/about (2).html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Офисное здание | Аренда | Bekosh</title>
+  <title>О нас | Минимальное агентство недвижимости</title>
+  <meta name="description" content="Узнайте больше о нашем агентстве недвижимости. Мы работаем с 2020 года и предоставляем премиум-услуги по продаже, аренде и управлению недвижимостью.">
   
 
 <link rel="stylesheet" href="assets/tw-replacement.css">
@@ -33,41 +34,74 @@
     </div>
   </header>
 
-  <main class="max-w-5xl mx-auto py-16 px-6">
-    <img 
-      src="https://avatars.mds.yandex.net/i?id=b6ff91b547d504a2c104d1f6a491877f_l-4352795-images-thumbs&n=13" 
-      alt="Офисное здание" 
-      class="w-full h-96 object-cover rounded-2xl shadow-lg mb-10">
+  <section class="bg-indigo-50 py-20 text-center">
+    <div class="max-w-4xl mx-auto px-6">
+      <h1 class="text-5xl font-extrabold mb-6 text-indigo-700">О нашем агентстве</h1>
+      <p class="text-lg text-gray-700 leading-relaxed">
+        Мы — современное агентство недвижимости, объединяющее технологии, опыт и доверие.  
+        С 2020 года мы помогаем людям находить дома своей мечты и успешно инвестировать в недвижимость.
+      </p>
+    </div>
+  </section>
 
-    <h1 class="text-4xl font-bold mb-4 text-center">Офисное здание в аренду</h1>
-    <p class="text-gray-600 text-center text-lg mb-10">Современный бизнес-центр в центре города — идеальное место для вашей компании.</p>
+  <main class="max-w-6xl mx-auto py-20 px-6 grid md:grid-cols-2 gap-12 items-center">
 
-    <div class="bg-white rounded-2xl shadow p-8 mb-10">
-      <h2 class="text-2xl font-semibold mb-4">Информация об объекте</h2>
-      <ul class="text-gray-700 space-y-2 text-lg">
-        <li> Адрес: г. Алматы, ул. Кабанбай батыра, 10</li>
-        <li> Площадь: 300 м²</li>
-        <li> Аренда: 5 000 ₸ / м² в месяц</li>
-        <li> Этаж: 3-й (есть лифт)</li>
-        <li> Парковка: до 10 машиномест</li>
-        <li> Интернет, кондиционирование, охрана 24/7</li>
+    <img src="https://avatars.mds.yandex.net/i?id=0eeba68fc5b830cea56fc37b1e2564969b60f873-5235063-images-thumbs&n=13" 
+         alt="Команда агентства недвижимости"
+         class="w-full h-96 object-cover rounded-2xl shadow-lg">
+
+    <div>
+      <h2 class="text-3xl font-semibold mb-6 text-indigo-700">Почему выбирают нас</h2>
+      <p class="text-gray-700 mb-4 leading-relaxed">
+        Мы делаем процесс покупки, продажи и аренды недвижимости прозрачным и удобным.  
+        Наша команда состоит из профессионалов, которые знают рынок и заботятся о каждом клиенте.
+      </p>
+      <p class="text-gray-700 mb-6 leading-relaxed">
+        Мы ценим доверие и всегда стремимся превзойти ожидания.  
+        Наша цель — не просто совершить сделку, а построить долгосрочные отношения.
+      </p>
+
+      <ul class="space-y-3 text-gray-700">
+        <li> Более 500 успешно проданных объектов</li>
+        <li> 5 лет опыта на рынке</li>
+        <li> Индивидуальный подход к каждому клиенту</li>
+        <li> Полная юридическая безопасность сделок</li>
       </ul>
     </div>
-
-    <div class="bg-indigo-50 p-8 rounded-2xl text-center mb-12">
-      <p class="text-lg text-gray-700 mb-4">Офис полностью готов к работе. Возможна аренда с мебелью и IT-инфраструктурой.</p>
-      <p class="text-2xl font-bold text-indigo-700">Связаться: +7 (777) 123-45-67</p>
-    </div>
-
-    <div class="text-center">
-      <a href="index.html" 
-         class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-xl hover:bg-indigo-700 transition">
-        ← Вернуться на главную
-      </a>
-    </div>
   </main>
-  </footer>
-  <footer class="bg-gray-100 text-gray-800 mt-20 border-t">
+
+  <section class="bg-white py-20">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold text-indigo-700 mb-12">Наша команда</h2>
+
+      <div class="grid md:grid-cols-3 gap-10">
+        <div class="bg-gray-50 rounded-2xl shadow p-6">
+          <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" alt="Менеджер"
+               class="w-32 h-32 mx-auto mb-4 rounded-full object-cover">
+          <h3 class="text-xl font-semibold mb-1">Бека Т.</h3>
+          <p class="text-gray-500 mb-3">Менеджер по продажам</p>
+          <p class="text-gray-600 text-sm">Помогает клиентам подобрать оптимальные объекты и сопровождает сделки с вниманием к деталям.</p>
+        </div>
+
+        <div class="bg-gray-50 rounded-2xl shadow p-6">
+          <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="Юрист"
+               class="w-32 h-32 mx-auto mb-4 rounded-full object-cover">
+          <h3 class="text-xl font-semibold mb-1">Ерлан С.</h3>
+          <p class="text-gray-500 mb-3">Юридический консультант</p>
+          <p class="text-gray-600 text-sm">Обеспечивает безопасность сделок и следит за чистотой документов каждого клиента.</p>
+        </div>
+
+        <div class="bg-gray-50 rounded-2xl shadow p-6">
+          <img src="https://cdn-icons-png.flaticon.com/512/4140/4140051.png" alt="Директор"
+               class="w-32 h-32 mx-auto mb-4 rounded-full object-cover">
+          <h3 class="text-xl font-semibold mb-1">Айша А.</h3>
+          <p class="text-gray-500 mb-3">Основатель агентства</p>
+          <p class="text-gray-600 text-sm">Создал агентство с идеей честности, прозрачности и инновационного подхода к недвижимости.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+<footer class="bg-gray-100 text-gray-800 mt-20 border-t">
   <div class="max-w-7xl mx-auto px-6 py-12 grid lg:grid-cols-5 md:grid-cols-3 sm:grid-cols-2 gap-8">
 
     <div>
@@ -104,7 +138,8 @@
     <div>
       <h3 class="font-semibold text-lg mb-4">Наши проекты</h3>
       <ul class="space-y-2 text-sm text-gray-600">
-        <li><span class="font-medium text-gray-700">krisha</span> — квартиры,дома</li>
+        <li><span class="font-medium text-gray-700">krisha.kz</span> — квартира,дома</li>
+
       </ul>
 
       <h3 class="font-semibold text-lg mt-6 mb-3">Связаться с нами</h3>
@@ -129,6 +164,17 @@
       <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://bekjan.kz&size=120x120" alt="QR" class="w-24 h-24 rounded-lg shadow">
     </div>
   </div>
+  </div>
+</footer>
+
+  <section class="bg-indigo-600 py-20 text-white text-center">
+    <div class="max-w-3xl mx-auto px-6">
+      <p class="text-2xl italic mb-6">
+        “Недвижимость — это не просто стены и крыша. Это место, где начинается история вашей жизни.”
+      </p>
+      <p class="text-lg font-semibold">— Команда Бекжан </p>
+    </div>
+  </section>
     <div class="bg-gray-800 text-center text-white py-4 text-sm mt-10">
     © 2025 Бекжан. Все права защищены.
 
