--- a/services (2).html
+++ b/services (2).html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Офисное здание | Аренда | Bekosh</title>
+  <title>Наши услуги | Минимальное Агентство Недвижимости</title>
+  <meta name="description" content="Полный спектр услуг агентства недвижимости: покупка, продажа, аренда и управление недвижимостью.">
   
 
 <link rel="stylesheet" href="assets/tw-replacement.css">
@@ -33,40 +34,77 @@
     </div>
   </header>
 
-  <main class="max-w-5xl mx-auto py-16 px-6">
-    <img 
-      src="https://avatars.mds.yandex.net/i?id=b6ff91b547d504a2c104d1f6a491877f_l-4352795-images-thumbs&n=13" 
-      alt="Офисное здание" 
-      class="w-full h-96 object-cover rounded-2xl shadow-lg mb-10">
+  <section class="bg-indigo-50 py-20 text-center">
+    <div class="max-w-4xl mx-auto px-6">
+      <h1 class="text-5xl font-extrabold mb-6 text-indigo-700">Наши услуги</h1>
+      <p class="text-lg text-gray-700">
+        Мы предлагаем полный спектр услуг в сфере недвижимости — от подбора жилья до юридического сопровождения сделки.  
+        Всё, чтобы процесс покупки, аренды или продажи был простым и безопасным.
+      </p>
+    </div>
+  </section>
 
-    <h1 class="text-4xl font-bold mb-4 text-center">Офисное здание в аренду</h1>
-    <p class="text-gray-600 text-center text-lg mb-10">Современный бизнес-центр в центре города — идеальное место для вашей компании.</p>
-
-    <div class="bg-white rounded-2xl shadow p-8 mb-10">
-      <h2 class="text-2xl font-semibold mb-4">Информация об объекте</h2>
-      <ul class="text-gray-700 space-y-2 text-lg">
-        <li> Адрес: г. Алматы, ул. Кабанбай батыра, 10</li>
-        <li> Площадь: 300 м²</li>
-        <li> Аренда: 5 000 ₸ / м² в месяц</li>
-        <li> Этаж: 3-й (есть лифт)</li>
-        <li> Парковка: до 10 машиномест</li>
-        <li> Интернет, кондиционирование, охрана 24/7</li>
-      </ul>
+  <section class="py-20 max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-10">
+    
+    <div class="bg-white rounded-2xl shadow p-8 hover:shadow-lg transition">
+      <div class="text-indigo-600 mb-4 text-4xl"></div>
+      <h3 class="text-2xl font-semibold mb-2">Покупка недвижимости</h3>
+      <p class="text-gray-600 mb-4">
+        Поможем подобрать идеальную квартиру, дом или коммерческое помещение.  
+        Проверим документы и сопроводим сделку до передачи ключей.
+      </p>
+      <a href="contact.html" class="text-indigo-600 font-medium hover:underline">Заказать консультацию →</a>
     </div>
 
-    <div class="bg-indigo-50 p-8 rounded-2xl text-center mb-12">
-      <p class="text-lg text-gray-700 mb-4">Офис полностью готов к работе. Возможна аренда с мебелью и IT-инфраструктурой.</p>
-      <p class="text-2xl font-bold text-indigo-700">Связаться: +7 (777) 123-45-67</p>
+    <div class="bg-white rounded-2xl shadow p-8 hover:shadow-lg transition">
+      <div class="text-indigo-600 mb-4 text-4xl"></div>
+      <h3 class="text-2xl font-semibold mb-2">Продажа недвижимости</h3>
+      <p class="text-gray-600 mb-4">
+        Оценим вашу недвижимость, подготовим к продаже и разместим на лучших площадках.  
+        Мы обеспечим выгодную и быструю сделку.
+      </p>
+      <a href="contact.html" class="text-indigo-600 font-medium hover:underline">Связаться с агентом →</a>
     </div>
 
-    <div class="text-center">
-      <a href="index.html" 
-         class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-xl hover:bg-indigo-700 transition">
-        ← Вернуться на главную
-      </a>
+    <div class="bg-white rounded-2xl shadow p-8 hover:shadow-lg transition">
+      <div class="text-indigo-600 mb-4 text-4xl"></div>
+      <h3 class="text-2xl font-semibold mb-2">Аренда недвижимости</h3>
+      <p class="text-gray-600 mb-4">
+        Подберём жильё или офис под ваши цели.  
+        Проверим договор аренды и обеспечим надёжность сделки.
+      </p>
+      <a href="contact.html" class="text-indigo-600 font-medium hover:underline">Подробнее →</a>
     </div>
-  </main>
-  </footer>
+
+    <div class="bg-white rounded-2xl shadow p-8 hover:shadow-lg transition">
+      <div class="text-indigo-600 mb-4 text-4xl"></div>
+      <h3 class="text-2xl font-semibold mb-2">Управление недвижимостью</h3>
+      <p class="text-gray-600 mb-4">
+        Полное обслуживание аренды: поиск жильцов, сбор платежей и контроль состояния объекта.
+      </p>
+      <a href="contact.html" class="text-indigo-600 font-medium hover:underline">Подробнее →</a>
+    </div>
+
+    <div class="bg-white rounded-2xl shadow p-8 hover:shadow-lg transition">
+      <div class="text-indigo-600 mb-4 text-4xl"></div>
+      <h3 class="text-2xl font-semibold mb-2">Юридическое сопровождение</h3>
+      <p class="text-gray-600 mb-4">
+        Проверим чистоту сделки, подготовим договор и обеспечим полную правовую защиту.
+      </p>
+      <a href="contact.html" class="text-indigo-600 font-medium hover:underline">Подробнее →</a>
+    </div>
+
+    <div class="bg-white rounded-2xl shadow p-8 hover:shadow-lg transition">
+      <div class="text-indigo-600 mb-4 text-4xl"></div>
+      <h3 class="text-2xl font-semibold mb-2">Инвестиции в недвижимость</h3>
+      <p class="text-gray-600 mb-4">
+        Подбираем объекты с высоким потенциалом доходности.  
+        Помогаем инвестировать безопасно и с прибылью.
+      </p>
+      <a href="contact.html" class="text-indigo-600 font-medium hover:underline">Узнать больше →</a>
+    </div>
+
+  </section>
   <footer class="bg-gray-100 text-gray-800 mt-20 border-t">
   <div class="max-w-7xl mx-auto px-6 py-12 grid lg:grid-cols-5 md:grid-cols-3 sm:grid-cols-2 gap-8">
 
@@ -104,7 +142,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-4">Наши проекты</h3>
       <ul class="space-y-2 text-sm text-gray-600">
-        <li><span class="font-medium text-gray-700">krisha</span> — квартиры,дома</li>
+        <li><span class="font-medium text-gray-700">krisha.kz</span> — квартиры,дома</li>
       </ul>
 
       <h3 class="font-semibold text-lg mt-6 mb-3">Связаться с нами</h3>
@@ -129,9 +167,22 @@
       <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://bekjan.kz&size=120x120" alt="QR" class="w-24 h-24 rounded-lg shadow">
     </div>
   </div>
-    <div class="bg-gray-800 text-center text-white py-4 text-sm mt-10">
-    © 2025 Бекжан. Все права защищены.
 
+  <div class="bg-gray-800 text-center text-white py-4 text-sm mt-10">
+    © 2025 Бекжан. Все права защищены.
+  </div>
+</footer>
+
+
+  <section class="bg-indigo-600 py-16 text-white text-center">
+    <div class="max-w-3xl mx-auto px-6">
+      <h2 class="text-3xl font-bold mb-4">Нужна консультация?</h2>
+      <p class="text-lg mb-8">Свяжитесь с нами, и мы бесплатно подскажем, какая услуга подойдёт именно вам.</p>
+      <a href="contact.html" class="bg-white text-indigo-700 font-semibold px-6 py-3 rounded-xl hover:bg-gray-100 transition">
+        Связаться с нами
+      </a>
+    </div>
+  </section>
 
   <script src="menu.js"></script>
 
