--- a/apartment-abaya45.html
+++ b/apartment-abaya45.html
@@ -4,19 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Квартира на Абая 45 | Bekosh</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  
+
+<link rel="stylesheet" href="assets/tw-replacement.css">
 </head>
 <body class="bg-gray-50 text-gray-800">
 
   <header class="sticky top-0 z-50 bg-white shadow">
     <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold text-indigo-600">Bekosh >
+      <a href="index.html" class="text-2xl font-bold text-indigo-600">Bekosh</a>
       <div class="hidden md:flex space-x-8 font-medium">
         <a href="index.html" class="hover:text-indigo-600 transition">Главная</a>
         <a href="services.html" class="hover:text-indigo-600 transition">Услуги</a>
+        <a href="about.html" class="hover:text-indigo-600 transition">О нас</a>
         <a href="contact.html" class="hover:text-indigo-600 transition">Контакты</a>
       </div>
+      <button id="mobile-menu-button" class="md:hidden p-2 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-200" aria-label="Открыть меню" aria-expanded="false">
+        <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7h16M4 12h16M4 17h16"/>
+        </svg>
+      </button>
     </nav>
+    <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg border-t border-gray-100">
+      <a href="index.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50 transition">Главная</a>
+      <a href="services.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50 transition">Услуги</a>
+      <a href="about.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50 transition">О нас</a>
+      <a href="contact.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50 transition">Контакты</a>
+    </div>
   </header>
 
   <main class="max-w-6xl mx-auto px-4 py-16">
@@ -76,9 +90,7 @@
     </div>
   </main>
 
-  <footer class="bg-gray-900 text-gray-400 py-8 mt-16">
-    <div class="max-w-7xl mx-auto px-4 text-center">
-      <p>&copy; 2025 Бекжан . Все права защищены.</p>
+
     </div>
   </footer>
 <footer class="bg-gray-100 text-gray-800 mt-20 border-t">
@@ -101,8 +113,6 @@
         <li><a href="#" class="hover:text-indigo-600">Подарочные сертификаты</a></li>
         <li><a href="#" class="hover:text-indigo-600">Бонусные карты</a></li>
         <li><a href="#" class="hover:text-indigo-600">Аренда помещений</a></li>
-        <li><a href="#" class="hover:text-indigo-600">Оптовым покупателям (b2b)</a></li>
-        <li><a href="#" class="hover:text-indigo-600">Как стать поставщиком?</a></li>
       </ul>
     </div>
 
@@ -120,8 +130,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-4">Наши проекты</h3>
       <ul class="space-y-2 text-sm text-gray-600">
-        <li><span class="font-medium text-gray-700">Meloman.kz</span> — книги, кино, игры, канцелярия</li>
-        <li><span class="font-medium text-gray-700">Europharma</span> — сеть аптек</li>
+        <li><span class="font-medium text-gray-700">krisha.kz</span> — квартиры,дома</li>
       </ul>
 
       <h3 class="font-semibold text-lg mt-6 mb-3">Связаться с нами</h3>
@@ -151,5 +160,8 @@
     © 2025 Бекжан. Все права защищены.
   </div>
 </footer>
+  <script src="menu.js"></script>
+
+<script defer src="assets/app.js"></script>
 </body>
 </html>
